Fixed bug to allow slideshowControls to be centered and not cut off on mobile display

--- a/site/css/kbp-internal.css
+++ b/site/css/kbp-internal.css
@@ -358,6 +358,8 @@ li#instagram a {
 
     .slideshowControls {
     	justify-content: center;
+        margin-left: 0;
+        width: 100%;
     }
 
     .slide figcaption {
